test/fixtures/typecheck/fail/BadInstanceMethod.lam
module BadInstanceMethod

type D = D

type C = C

class F a where
  f : a

instance F D where
  f = C
